Add proper logging for bot startup